@@ -10,7 +10,7 @@ import com.company.oop.logistics.models.DeliveryRouteImpl;
 import com.company.oop.logistics.models.contracts.*;
 import com.company.oop.logistics.models.enums.City;
 import com.company.oop.logistics.utils.constants.CityDistance;
-import com.company.oop.logistics.utils.misc.ComparingHelpers;
+import com.company.oop.logistics.utils.validation.ValidationHelpers;
 
 import java.time.LocalDateTime;
 import java.util.*;
@@ -57,7 +57,9 @@ public class RouteServiceImpl implements RouteService {
 
     @Override
     public DeliveryRoute createDeliveryRoute(LocalDateTime startTime, ArrayList<City> cities) {
-        DeliveryRoute route = new DeliveryRouteImpl(nextId, startTime, generateRouteLocations(startTime, cities));
+        ValidationHelpers.validateUniqueList(cities, ERROR_CITIES_NOT_UNIQUE);
+        List<Integer> locations = generateRouteLocations(startTime, cities);
+        DeliveryRoute route = new DeliveryRouteImpl(nextId, startTime, locations);
         nextId++;
         this.routes.add(route);
         save();
@@ -66,18 +68,22 @@ public class RouteServiceImpl implements RouteService {
 
     public List<Integer> generateRouteLocations(LocalDateTime startTime, ArrayList<City> cities) {
         ArrayList<Location> result = new ArrayList<>();
-        LocalDateTime currentTime = startTime;
+        LocalDateTime arrivalTime = null;
+        LocalDateTime departureTime = startTime;
         for (int i = 0; i < cities.size(); i++) {
-            int timeToTravel = 0;
+            long timeToTravel = 0;
             if (i < cities.size() - 1) {
-                timeToTravel = (int) ((float) CityDistance.getDistance(cities.get(i), cities.get(i + 1))
-                        / INT_TRUCK_SPEED * 60) * 60;
+                timeToTravel = CityDistance.getTravelTimeSeconds(cities.get(i),cities.get(i + 1), INT_TRUCK_SPEED);
+            }else{
+                departureTime = null;
             }
-            result.add(locationService.createLocation(cities.get(i),
-                    currentTime, currentTime.plusMinutes(RESTING_MINUTES)));
-            currentTime = currentTime.plusMinutes(RESTING_MINUTES).plusSeconds(timeToTravel);
+            result.add(locationService.createLocation(cities.get(i), arrivalTime, departureTime));
+            if (departureTime != null) {
+                arrivalTime = departureTime.plusSeconds(timeToTravel);
+                departureTime = arrivalTime.plusMinutes(RESTING_MINUTES);
+            }
         }
-        return result.stream().map(Identifiable::getId).toList();
+        return result.stream().map(Location::getId).toList();
     }
 
 
@@ -85,8 +91,9 @@ public class RouteServiceImpl implements RouteService {
     public boolean isVehicleAssigned(Truck vehicle, LocalDateTime startTime) {
         boolean result = false;
         if (!vehicle.getLocationIds().isEmpty()) {
+            int lastLocationId = vehicle.getLocationIds().get(vehicle.getLocationIds().size() - 1);
             LocalDateTime freeAfter = locationService
-                    .getLocationById(vehicle.getLocationIds().getLast()).getArrivalTime();
+                    .getLocationById(lastLocationId).getArrivalTime();
             if (freeAfter.isAfter(startTime)) {
                 result = true;
             }
@@ -107,7 +114,7 @@ public class RouteServiceImpl implements RouteService {
             throw new IllegalArgumentException(String.format(ERROR_VEHICLE_ALREADY_ASSIGNED, vehicle.getId()));
         }
         if (!vehicleLocations.isEmpty()){
-            if (!vehicleLocations.getLast().getName().equals(origin.getName())) {
+            if (!vehicleLocations.get(vehicleLocations.size() - 1).getName().equals(origin.getName())) {
                 throw new IllegalStateException("Vehicle is not stationed in the correct city at that time.");
             }
         }
@@ -149,7 +156,7 @@ public class RouteServiceImpl implements RouteService {
 
         Truck assignedVehicle = vehicleService.getVehicleById(deliveryRoute.getAssignedVehicleId());
 
-        ArrayList<Location> locationsToAdd =
+        List<Location> locationsToAdd =
                 getLocations(deliveryRouteId, deliveryPackage.getStartLocation(), deliveryPackage.getEndLocation());
 
         if((deliveryPackage.getWeightKg() +
@@ -160,6 +167,7 @@ public class RouteServiceImpl implements RouteService {
         if (locationsToAdd.get(0).getDepartureTime().isBefore(LocalDateTime.now())){
             throw new IllegalStateException(ERROR_ROUTE_STARTED_BEFORE_PACKAGE_ASSIGN);
         }
+        locationsToAdd = locationService.trimLocations(locationsToAdd);
         deliveryPackage.setLocations(locationsToAdd.stream().map(Identifiable::getId)
                 .collect(Collectors.toCollection(ArrayList::new)));
         deliveryRoute.addPackage(deliveryPackage.getId());
